# pathfinder

./: Makefile  README.md  docker-compose.dev.yml  pyproject.toml
nginx/: nginx.conf
pathfinder_service/: Makefile  README.md  alembic.ini  pyproject.toml
pathfinder_service/migrations/: env.py
pathfinder_service/migrations/versions/: 9d667a7fae28_init.py
pathfinder_service/src/: settings.py
pathfinder_service/src/apis/: users_api.py
pathfinder_service/src/auth/: check.py
pathfinder_service/src/db/: database.py  dependencies.py  events.py  models.py
pathfinder_service/src/db/repositories/: coordinates.py  pathfinder.py  routes.py
pathfinder_service/src/handlers/: __init__.py  coordinates.py  pathfinder.py  routes.py
pathfinder_service/src/schemas/: coordinates.py  routes.py
pathfinder_service/src/worker/: celery_api.py  dependencies.py  signals.py  worker.py
postgres/: Dockerfile  init_databases_if_needed.sql
tools/: coordinates_generator.py
user_service/: Dockerfile  alembic.ini  pyproject.toml
user_service/migrations/: env.py
user_service/migrations/versions/: 14c52a431eb0_create_dummy_users.py  17610becc1a1_init.py
user_service/src/: main.py  settings.py
user_service/src/auth/: bearer.py  helpers.py
user_service/src/db/: dependencies.py  models.py
user_service/src/db/repositories/: users.py
user_service/src/handlers/: __init__.py  auth.py  users.py
user_service/src/schemas/: users.py
