[tool.poetry]
name = "pathfinder"
version = "0.0.1"
description = "Route planning web service"
authors = ["Sergey Chudov <chudov42@gmail.com>"]
license = "MIT"

packages = [
    {include = "user_service"}
]

readme = "README.md"
homepage = "https://github.com/WindowGenerator/pathfinder"
repository = "https://github.com/WindowGenerator/pathfinder"
documentation = "https://github.com/WindowGenerator/pathfinder"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
pre-commit = "^2.19.0"

[tool.isort]
line_length = 88
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
not_skip = "__init__.py"
filter_files = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
