[tool.poetry]
name = "pathfinder_service"
version = "0.0.1"
description = "Service engaged in the search and creation of optimal routes"
authors = ["Sergey Chudov <chudov42@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
SQLAlchemy = "^1.4.37"
uvicorn = "^0.17.6"
asyncpg = "^0.25.0"
httpx = "^0.23.0"
celery = "^5.2.7"
redis = "^4.3.3"

[tool.poetry.dev-dependencies]
alembic = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
